@@ -167,6 +167,7 @@ let find = function
     | "\\Harr"             -> LITERAL (HTMLABLE  (FONT_UF,  "\\Leftrightarrow ", "&hArr;"))
     | "\\lrArr"            -> LITERAL (HTMLABLE  (FONT_UF,  "\\Leftrightarrow ", "&hArr;"))
     | "\\hAar"             -> LITERAL (HTMLABLE  (FONT_UF,  "\\Leftrightarrow ", "&hArr;"))
+    | "\\longleftrightarrow"->LITERAL (HTMLABLE  (FONT_UF,  "\\longleftrightarrow ", "&harr;"))
     | "\\Longleftrightarrow"->LITERAL (HTMLABLE  (FONT_UF,  "\\Longleftrightarrow ", "&harr;"))
     | "\\iff"              -> LITERAL (HTMLABLE  (FONT_UF,  "\\iff ", "&harr;"))
     | "\\ll"		   -> LITERAL (TEX_ONLY "\\ll ")
@@ -177,6 +178,7 @@ let find = function
     | "\\swarrow"          -> LITERAL (TEX_ONLY "\\swarrow ")
     | "\\nwarrow"          -> LITERAL (TEX_ONLY "\\nwarrow ")
     | "\\simeq"            -> LITERAL (TEX_ONLY "\\simeq ")
+    | "\\ast"              -> LITERAL (TEX_ONLY "\\ast ")
     | "\\star"             -> LITERAL (TEX_ONLY "\\star ")
     | "\\ell"              -> LITERAL (TEX_ONLY "\\ell ")
     | "\\P"                -> LITERAL (TEX_ONLY "\\P ")
@@ -214,6 +216,7 @@ let find = function
     | "\\circ"             -> LITERAL (TEX_ONLY "\\circ ")
     | "\\hbar"             -> LITERAL (TEX_ONLY "\\hbar ")
     | "\\imath"            -> LITERAL (TEX_ONLY "\\imath ")
+    | "\\jmath"            -> LITERAL (TEX_ONLY "\\jmath ")
     | "\\lnot"             -> LITERAL (TEX_ONLY "\\lnot ")
     | "\\hookrightarrow"   -> LITERAL (TEX_ONLY "\\hookrightarrow ")
     | "\\hookleftarrow"    -> LITERAL (TEX_ONLY "\\hookleftarrow ")
@@ -324,6 +327,7 @@ let find = function
     | "\\otimes"           -> LITERAL (HTMLABLE (FONT_UF, "\\otimes ", "&otimes;"))
     | "\\cap"              -> LITERAL (HTMLABLEM(FONT_UF, "\\cap ", "&cap;"))
     | "\\cup"              -> LITERAL (HTMLABLE (FONT_UF, "\\cup ", "&cup;"))
+    | "\\uplus"            -> LITERAL (TEX_ONLY "\\uplus ")
     | "\\sqcap"            -> (tex_use_ams (); LITERAL (TEX_ONLY "\\sqcap "))
     | "\\sqcup"            -> (tex_use_ams (); LITERAL (TEX_ONLY "\\sqcup "))
     | "\\empty"            -> LITERAL (HTMLABLE (FONT_UF, "\\emptyset ", "&empty;"))
@@ -352,6 +356,7 @@ let find = function
     | "\\rang"             -> DELIMITER (HTMLABLE (FONT_UFH,"\\rangle ","&rang;"))
     | "\\lbrack"           -> DELIMITER (HTMLABLEC(FONT_UFH,"[","["))
     | "\\rbrack"           -> DELIMITER (HTMLABLEC(FONT_UFH,"]","]"))
+    | "\\surd"             -> LITERAL (TEX_ONLY "\\surd ")
     | "\\ddots"            -> LITERAL (TEX_ONLY "\\ddots ")
     | "\\clubs"            -> LITERAL (TEX_ONLY "\\clubsuit ")
     | "\\clubsuit"         -> LITERAL (TEX_ONLY "\\clubsuit ")
@@ -360,7 +365,23 @@ let find = function
     | "\\hearts"           -> LITERAL (TEX_ONLY "\\heartsuit ")
     | "\\heartsuit"        -> LITERAL (TEX_ONLY "\\heartsuit ")
     | "\\diamonds"         -> LITERAL (TEX_ONLY "\\diamondsuit ")
+    | "\\diamond"          -> LITERAL (TEX_ONLY "\\diamond ")
+    | "\\bigtriangleup"    -> LITERAL (TEX_ONLY "\\bigtriangleup ")
+    | "\\bigtriangledown"  -> LITERAL (TEX_ONLY "\\bigtriangledown ")
     | "\\diamondsuit"      -> LITERAL (TEX_ONLY "\\diamondsuit ")
+    | "\\ominus"           -> LITERAL (TEX_ONLY "\\ominus ")
+    | "\\oslash"           -> LITERAL (TEX_ONLY "\\oslash ")
+    | "\\odot"             -> LITERAL (TEX_ONLY "\\odot ")
+    | "\\bigcirc"          -> LITERAL (TEX_ONLY "\\bigcirc ")
+    | "\\amalg"            -> LITERAL (TEX_ONLY "\\amalg ")
+    | "\\prec"             -> LITERAL (TEX_ONLY "\\prec ")
+    | "\\succ"             -> LITERAL (TEX_ONLY "\\succ ")
+    | "\\preceq"           -> LITERAL (TEX_ONLY "\\preceq ")
+    | "\\succeq"           -> LITERAL (TEX_ONLY "\\succeq ")
+    | "\\dashv"            -> LITERAL (TEX_ONLY "\\dashv ")
+    | "\\asymp"            -> LITERAL (TEX_ONLY "\\asymp ")
+    | "\\doteq"            -> LITERAL (TEX_ONLY "\\doteq ")
+    | "\\parallel"         -> LITERAL (TEX_ONLY "\\parallel ")
     | "\\implies"          -> (tex_use_ams (); LITERAL (HTMLABLE (FONT_UF, "\\implies ", "&rArr;")))
     | "\\mod"              -> (tex_use_ams (); LITERAL (HTMLABLE (FONT_UFH,"\\mod ", "mod")))
     | "\\Diamond"          -> (tex_use_ams (); LITERAL (HTMLABLE (FONT_UF, "\\Diamond ", "&loz;")))
